--- a/ONLINE PORTFOLIO.html
+++ b/ONLINE PORTFOLIO.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Portfolio</title>
+  <title>Online Portfolio</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -112,8 +112,6 @@
         <li>python</li>
     </ul>
   </section>
-
-  <!-- Projects -->
   <section id="projects" class="projects">
     <h2>Projects</h2>
     <div class="project-card">
@@ -127,8 +125,6 @@
       <p>It Is A Machine learning Model to detect the Emotion And Autism.</p>
     </div>
   </section>
-
-  <!-- Experience -->
   <section id="experience" class="experience">
     <h2>Experience</h2>
     <div class="exp-item">
@@ -141,15 +137,11 @@
       <p>And transfer of data between different sectors of caol mines through OFC cables,installation and working of cc cameras</p>
     </div>
   </section>
-
-  <!-- Contact -->
   <section id="contact" class="contact">
     <h2>Contact Me</h2>
     <p>Email: sirajmohammad@example.com</p>
     <p>Phone: (555) 123-4567</p>
   </section>
-
-  <!-- Footer -->
   <footer>
     <p>© 2025 sirajmohammad. All rights reserved.</p>
   </footer>
@@ -162,3 +154,4 @@
   </script>
 </body>
 </html>
+
